<resources>
    <string name="app_name">AudioVision</string>
    <string name="menu_font_size">35</string>
    <string name="left_just">0.124</string>
    <string name="upper_bound">.034</string>
    <string name="photos">Photos</string>
    <string name="take_picture">Take Picture</string>
    <string name="settings">Settings</string>
    <string name="playback">Playback</string>
    <string name="general_settings">General</string>
    <string name="relationship_settings">Mood/Genre</string>
    <string name="play_music">Now Playing</string>
    <string name="retake_picture">Retake Picture</string>
    <string name="play">Play</string>

</resources>
