<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="harmon.osu.appname.SettingsMenuActivity">

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="436dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_menu_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="35dp" />

        <Button
            android:id="@+id/music_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playback" />

        <Button
            android:id="@+id/relationship_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relationship_settings" />

        <Button
            android:id="@+id/general_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
