<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="harmon.osu.appname.LoadingScreenActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:text="@string/photos"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="67dp"
        android:text="@string/take_picture"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="79dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="62dp"
        android:text="@string/settings"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="146dp" />

</android.support.constraint.ConstraintLayout>
