<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="harmon.osu.appname.AverageColorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <View
            android:id="@+id/color_square"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:background="#DDDDDD"
            android:visibility="visible" />

        <Button
            android:id="@+id/play_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toTakePicture"
            android:text="@string/retake_picture" />

        <Button
            android:id="@+id/photos_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toPhotos"
            android:text="@string/photos" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
